# ChangeLog for media-video/droidcam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Dec 2010; <alunduil@gentoo.org> droidcam-2.0.ebuild:
  Updating module build location

  12 Dec 2010; <alunduil@gentoo.org> droidcam-2.0.ebuild:
  Moving module install location

  12 Dec 2010; <alunduil@gentoo.org> droidcam-2.0.ebuild:
  Needed to force ARCH?

  11 Dec 2010; <alunduil@gentoo.org> droidcam-2.0.ebuild:
  Keyworded ~amd64

*droidcam-2.0 (11 Dec 2010)

  11 Dec 2010; <alunduil@gentoo.org> +droidcam-2.0.ebuild, +metadata.xml:
  Adding droidcam from bug #339780
