@@ -1,4 +1,5 @@
 DIST droidcam.tar.gz 8328 RMD160 30b9eb07cbaafe1edabb302251d2e2a9987e688e SHA1 cbbb2f2173a8696cef4d0a02846912ce117774e6 SHA256 2dfb3a2c4c19f74b9c9d7501b2d857feea4d1c13af28247f85851caf93dd9806
-EBUILD droidcam-2.0.ebuild 899 RMD160 beb3ee9f555905764096597f1d24c73020d1f08b SHA1 b799bae510a45d1082e6fdabf4c1d14a330d9407 SHA256 ba8fb5a4a3f70fcef23da42b9c3642648171a10e5b38e69db812f8ecdb5fc6fb
-MISC ChangeLog 605 RMD160 c54e0f8aeca50b2e53376e30a088903528214069 SHA1 4a9723081abe00a5e4f357480d3777afd4c37d14 SHA256 cb54d6ed5e0463dcaaa4732c76890b89814c2bd3fac79bdfd975cb3711db0252
+EBUILD droidcam-2.0-r1.ebuild 899 RMD160 beb3ee9f555905764096597f1d24c73020d1f08b SHA1 b799bae510a45d1082e6fdabf4c1d14a330d9407 SHA256 ba8fb5a4a3f70fcef23da42b9c3642648171a10e5b38e69db812f8ecdb5fc6fb
+EBUILD droidcam-2.0.ebuild 898 RMD160 008039187f1a3723bd5080aca3c4bc093f7702c8 SHA1 132bf2ff00274f55813a7b51e63e3cc48da193d6 SHA256 4b1678e47887075079b6092854332370c165f3f7b304e3887c78937dedd7a069
+MISC ChangeLog 768 RMD160 9de20f9f0374d7ee97b90701ff59c4607536ac8d SHA1 605a04feaab061011749a1cff60e9737456284f4 SHA256 e963194fe5f03919353c32b70e5f0d8d08468a0b378857186cc86e31e212dfe7
 MISC metadata.xml 208 RMD160 7d450f0914ddfba5fc3b32265d92cef2808247e0 SHA1 6d1bdacd6ea73eef2c633097d0201fd3da4f8bad SHA256 eec8e2e2179cc7fc7b89c613d7d15bc64ad1681a67d08e23049742c852f1960f
